command line version works with the debugger HttpServerDebugger can read the static UI files also from JAR file and not only in debug mode